// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManyOfAnt should render a select control by default 1`] = `
<Select
  bordered={true}
  choiceTransitionName="zoom"
  data-testid="Id.manyOf"
  disabled={false}
  id="id-many_of"
  label="Choose your snack"
  mode="default"
  onChange={[Function]}
  placeholder="Please select"
  readOnly={false}
  transitionName="slide-up"
  value={Array []}
>
  <Option
    data-testid="id-many_of-b"
    key="b"
    value="b"
  >
    Banana
  </Option>
  <Option
    data-testid="id-many_of-a"
    key="a"
    value="a"
  >
    Apples
  </Option>
  <Option
    data-testid="id-many_of-p"
    key="p"
    value="p"
  >
    Peaches
  </Option>
</Select>
`;

exports[`ManyOfCheckboxAnt should render a checkboxes by default 1`] = `
<CheckboxGroup
  data-testid="Id.manyOf"
  disabled={false}
  id="id-many_of"
  label="Choose your snack"
  onChange={[Function]}
  options={Array []}
  readOnly={false}
  value={Array []}
>
  <Row
    gutter={0}
  >
    <Col
      key="b"
    >
      <Checkbox
        data-testid="id-many_of-b"
        indeterminate={false}
        value="b"
      >
        Banana
      </Checkbox>
    </Col>
    <Col
      key="a"
    >
      <Checkbox
        data-testid="id-many_of-a"
        indeterminate={false}
        value="a"
      >
        Apples
      </Checkbox>
    </Col>
    <Col
      key="p"
    >
      <Checkbox
        data-testid="id-many_of-p"
        indeterminate={false}
        value="p"
      >
        Peaches
      </Checkbox>
    </Col>
  </Row>
</CheckboxGroup>
`;

exports[`ManyOfFormAnt should render a checkboxes by default 1`] = `
<FormItemAnt
  operation="bound ManyOfImpl"
>
  <ManyOfAnt
    disabled={false}
    id="id-many_of"
    operation="bound ManyOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;
